force-app/main/default/objects/Endpoints__c/Endpoints__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Endpoints</label>
</CustomObject>