force-app/main/default/objects/Endpoints__c/fields/Nlauth_Account__c.field-meta.xml
<CustomField>
    <fullName>Nlauth_Account__c</fullName>
    <label>Nlauth_Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>