force-app/main/default/objects/Endpoints__c/fields/Realm__c.field-meta.xml
<CustomField>
    <fullName>Realm__c</fullName>
    <label>Realm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>