force-app/main/default/objects/Endpoints__c/fields/Script_Id__c.field-meta.xml
<CustomField>
    <fullName>Script_Id__c</fullName>
    <label>Script Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>